--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@chakra-ui/react": "^1.5.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/antic-didone": "^4.5.0",
+    "@fontsource/baloo-bhai-2": "^4.5.0",
     "@fontsource/sora": "^4.2.2",
     "framer-motion": "^4",
     "next": "10.x",
