--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "nextjs",
+  "name": "portfolio",
+  "author": {
+    "name": "Vincent Arlou",
+    "email": "arlou@protonmail.com",
+    "url": "https://github.com/vinclou"
+  },
   "version": "0.1.0",
+  "description": "React / NextJS, portfolio vinclou",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,6 +26,7 @@
     "@fontsource/sora": "^4.2.2",
     "framer-motion": "^4",
     "next": "10.x",
+    "next-pwa": "^5.2.23",
     "react": "17.x",
     "react-dom": "17.x"
   },
