--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fontsource/antic-didone": "^4.5.0",
     "@fontsource/baloo-bhai-2": "^4.5.0",
     "@fontsource/sora": "^4.2.2",
+    "@react-three/drei": "^7.2.1",
     "@react-three/fiber": "^7.0.5",
     "framer-motion": "^4",
     "next": "10.x",
