--- a/package.json
+++ b/package.json
@@ -43,23 +43,28 @@
     "@react-three/drei": "^7.2.1",
     "@react-three/fiber": "^7.0.5",
     "framer-motion": "^4",
+    "gray-matter": "^4.0.3",
     "next": "10.x",
+    "next-mdx-remote": "^3.0.4",
     "next-pwa": "^5.2.23",
     "prop-types": "^15.7.2",
     "react": "17.x",
     "react-dom": "17.x",
     "react-icons": "^4.2.0",
+    "reading-time": "^1.3.0",
     "three": "^0.130.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
     "@storybook/addon-a11y": "^6.2.8",
     "@storybook/addon-actions": "^6.2.7",
-    "@storybook/addon-essentials": "^6.2.7",
+    "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.2.7",
-    "@storybook/addon-storyshots": "^6.2.9",
-    "@storybook/react": "^6.2.7",
+    "@storybook/addon-storyshots": "^6.1.21",
+    "@storybook/react": "^3.4.12",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "babel-eslint": "^10.1.0",
