--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-three/fiber": "^7.0.5",
     "framer-motion": "^4",
     "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
     "next": "10.x",
     "next-mdx-remote": "^3.0.4",
     "next-pwa": "^5.2.23",
@@ -53,6 +54,9 @@
     "react-dom": "17.x",
     "react-icons": "^4.2.0",
     "reading-time": "^1.3.0",
+    "remark-autolink-headings": "^6.0.1",
+    "remark-code-titles": "^0.1.2",
+    "remark-slug": "^6.1.0",
     "three": "^0.130.1",
     "uuid": "^8.3.2"
   },
@@ -82,6 +86,11 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "rehype": "^12.0.0",
+    "remark-frontmatter": "^4.0.0",
+    "remark-parse": "^10.0.0",
+    "remark-stringify": "^10.0.0",
+    "rss": "^1.2.2"
   }
 }
