improve seo, add sitemaps for static/dynamic pages

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "eslint . --ext .json --ext .js",
     "test": "jest",
     "test:update": "jest -u",
@@ -85,6 +86,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "next-sitemap": "^1.6.148",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
     "rehype": "^12.0.0",
