--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ yarn-error.log*
 # vercel
 .vercel
 
+# ignore robots and sitemap, they need to be buld at Vercel
+/public/robots.txt
+/public/sitemap.xml
+
 # my blog template files
 /data/posts/test-styles.mdx
 /data/posts/sample-post.mdx
