--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ yarn-error.log*
 # vercel
 .vercel
 
+# vscode
+/.vscode/
+
 # ignore robots and sitemap, they need to be buld at Vercel
 /public/robots.txt
 /public/sitemap.xml
