--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "10.x",
     "next-mdx-remote": "^3.0.4",
     "next-pwa": "^5.2.23",
+    "preact": "^10.5.14",
     "prop-types": "^15.7.2",
     "react": "17.x",
     "react-dom": "17.x",
