fix web workers

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,7 +10,7 @@
       "@/lib/*": ["lib/*"],
       "@/styles/*": ["styles/*"],
       "@/utils/*": ["utils/*"],
-      "@/hooks/*": ["utils/hooks/*"]
+      "@/hooks/*": ["hooks/*"]
     }
   },
   "exclude": ["node_modules"]
