--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-testing-library": "^4.5.0",
+    "feed": "^4.2.2",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
