--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "description": "React / NextJS, Vincent Arlou(vinclou) blog/portfolio",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
     "start": "next start",
     "postbuild": "next-sitemap",
     "lint": "eslint . --ext .json --ext .js",
