--- a/package.json
+++ b/package.json
@@ -9,82 +9,77 @@
   "description": "React / NextJS, Vincent Arlou(vinclou) blog/portfolio",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "postbuild": "next-sitemap",
-    "lint": "eslint . --ext .json --ext .js",
+    "lint": "eslint . --ext .json --ext .js --ext .jsx --ext .ts --ext .tsx",
     "test": "jest",
     "test:update": "jest -u",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prettier": "prettier --write \"**/*.{html,js,jsx,json,md,mdx,yml}\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{html,js,md,yml}": [
-      "prettier --write",
-      "git add"
-    ]
+    "prettier": "prettier --write \"**/*.{html,js,jsx,json,md,mdx,yml,ts,tsx}\""
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.10",
-    "@chakra-ui/react": "^1.5.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@fontsource/iosevka": "^4.5.1",
-    "@fontsource/sora": "^4.2.2",
-    "@react-three/drei": "^7.2.1",
-    "@react-three/fiber": "^7.0.5",
-    "framer-motion": "^4",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/iosevka": "^5.0.18",
+    "@fontsource/sora": "^5.0.18",
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.11",
+    "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
-    "next": "10.x",
-    "next-mdx-remote": "^3.0.4",
-    "next-pwa": "^5.2.23",
-    "preact": "^10.5.14",
-    "prop-types": "^15.7.2",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "react-icons": "^4.2.0",
-    "reading-time": "^1.3.0",
-    "remark-autolink-headings": "^6.0.1",
+    "next": "^14.0.4",
+    "next-mdx-remote": "^4.4.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "reading-time": "^1.5.0",
+    "remark-autolink-headings": "^7.0.1",
     "remark-code-titles": "^0.1.2",
-    "remark-slug": "^6.1.0",
-    "three": "^0.130.1",
-    "uuid": "^8.3.2"
+    "remark-slug": "^7.0.1",
+    "three": "^0.158.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.7",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest-dom": "^3.9.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-testing-library": "^4.5.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "feed": "^4.2.2",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "next-sitemap": "^1.6.148",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.2",
-    "rehype": "^12.0.0",
-    "remark-frontmatter": "^4.0.0",
-    "remark-parse": "^10.0.0",
-    "remark-stringify": "^10.0.0",
-    "rss": "^1.2.2"
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "next-sitemap": "^4.2.3",
+    "prettier": "^3.1.1",
+    "react-test-renderer": "^18.2.0",
+    "rehype": "^13.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "rss": "^1.2.2",
+    "typescript": "^5.3.3"
   }
 }
