--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@react-three/fiber": "^8.15.11",
     "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
-    "mdx-prism": "^0.3.4",
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
     "prop-types": "^15.8.1",
@@ -45,9 +44,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "reading-time": "^1.5.0",
+    "rehype-pretty-code": "^0.10.2",
     "remark-autolink-headings": "^7.0.1",
     "remark-code-titles": "^0.1.2",
     "remark-slug": "^7.0.1",
+    "shiki": "^0.14.7",
     "three": "^0.158.0",
     "uuid": "^9.0.1"
   },
