--- a/package.json
+++ b/package.json
@@ -1,92 +1,45 @@
 {
-  "name": "vinclou",
-  "author": {
-    "name": "Vincent Arlou",
-    "email": "arlou@protonmail.com",
-    "url": "https://vincentarlou.com"
-  },
-  "version": "0.1.0",
-  "description": "React / NextJS, Vincent Arlou(vinclou) blog/portfolio",
+  "name": "vincent-arlou-portfolio",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postbuild": "next-sitemap",
-    "lint": "eslint . --ext .json --ext .js --ext .jsx --ext .ts --ext .tsx",
-    "test": "jest",
-    "test:update": "jest -u",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "prettier": "prettier --write \"**/*.{html,js,jsx,json,md,mdx,yml,ts,tsx}\""
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/button": "^2.1.0",
-    "@chakra-ui/color-mode": "^2.2.0",
-    "@chakra-ui/form-control": "^2.2.0",
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/input": "^2.1.2",
-    "@chakra-ui/layout": "^2.3.1",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@chakra-ui/react": "^2.8.2",
-    "@chakra-ui/visually-hidden": "^2.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/iosevka": "^5.0.18",
-    "@fontsource/sora": "^5.0.18",
-    "@react-three/drei": "^9.88.17",
-    "@react-three/fiber": "^8.15.11",
     "framer-motion": "^10.16.16",
-    "gray-matter": "^4.0.3",
-    "next": "^14.0.4",
-    "next-mdx-remote": "^4.4.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@fontsource/sora": "^5.0.18",
+    "@fontsource/iosevka": "^5.0.18",
     "react-icons": "^4.12.0",
+    "next-mdx-remote": "^5.0.0",
+    "gray-matter": "^4.0.3",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.10.2",
-    "remark-autolink-headings": "^7.0.1",
-    "remark-code-titles": "^0.1.2",
     "remark-slug": "^7.0.1",
-    "shiki": "^0.14.7",
+    "remark-autolink-headings": "^7.0.1",
+    "rehype-pretty-code": "^0.13.2",
+    "shiki": "^1.0.0",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.88.17",
     "three": "^0.158.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-react": "^7.23.3",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@types/node": "^20.10.5",
+    "typescript": "^5.3.3",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^6.2.0",
-    "feed": "^4.2.2",
-    "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.0",
-    "next-sitemap": "^4.2.3",
-    "prettier": "^3.1.1",
-    "react-test-renderer": "^18.2.0",
-    "rehype": "^13.0.1",
-    "remark-frontmatter": "^5.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
-    "rss": "^1.2.2",
-    "typescript": "^5.3.3"
+    "eslint-config-next": "^15.0.3",
+    "prettier": "^3.1.1"
   }
 }
