--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@react-three/fiber": "^8.15.11",
     "@react-three/drei": "^9.88.17",
     "three": "^0.158.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
